--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "@co-digital/logging": "^1.0.1",
     "cookie": "^0.6.0",
-    "cookie-parser": "^1.4.6"
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0"
   },
   "engines": {
     "npm": ">=10.0.0",
@@ -29,14 +30,15 @@
   "devDependencies": {
     "@types/cookie": "^0.6.0",
     "@types/cookie-parser": "^1.4.6",
+    "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.6.2",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.49.0",
-    "husky": "^8.0.3",
     "express": "^4.18.2",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
