Add cognitoJwtVerifier and update configs

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
 AUTH_SIGN_IN_URL=""
+AUTH_SIGN_IN_LANDING_PAGE_PARAM=""
+
 SESSION_ID_NAME=""
 COOKIE_PARSER_SECRET=""
-AUTH_SIGN_IN_LANDING_PAGE_PARAM=""
+
+USER_POOL_ID=""
+USER_POOL_CLIENT_ID=""
 
 LOG_LEVEL=info
 HUMAN=false
