--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
       /* Interop Constraints */
       "esModuleInterop": true, /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
       "forceConsistentCasingInFileNames": true, /* Ensure that casing is correct in imports. */
-  
+      "declaration": true,
+
       /* Type Checking */
       "strict": true, /* Enable all strict type-checking options. */
       "strictNullChecks": true, /* When type checking, take into account 'null' and 'undefined'. */
